//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  name String
  email String [unique, not null]
  emailVerified DateTime
  image String
  accounts accounts [not null]
  sessions sessions [not null]
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Organization organizations
  organizationId String
  chargeBeeId String [unique, not null]
  chargeBeeSubscriptionId String [unique, not null]
  chargeBeePriceId String [unique, not null]
  chargeBeeCurrentPlanEnd String [not null]
}

Table accounts {
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]

  indexes {
    (provider, providerAccountId) [pk]
  }
}

Table sessions {
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table verification_tokens {
  identifier String [not null]
  token String [not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [pk]
  }
}

Table organizations {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  image String
  members users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
}

Enum Role {
  USER
  ADMIN
}

Ref: users.organizationId > organizations.id

Ref: accounts.userId > users.id [delete: Cascade]

Ref: sessions.userId > users.id [delete: Cascade]